--- a/15.html
+++ b/15.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WITTO INVEST</title>
+    <title>COR INVEST</title>
     <link rel="stylesheet" href="invest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
@@ -31,7 +31,7 @@
         </div>
         <div class="num">
             <h3>Account Name</h3>
-            <h3>Witto Invest</h3>
+            <h3>Cor Invest</h3>
         </div>
        </div>
        <div class="border">
@@ -47,7 +47,7 @@
         </div>
         <div class="num">
             <h3>Account Name</h3>
-            <h3>Witto Invest</h3>
+            <h3>Cor Invest</h3>
         </div>
        </div>
        <br>
