--- a/15.html
+++ b/15.html
@@ -17,48 +17,28 @@
        <div class="content">
         <h1>NGN ₦15,000</h1>
                <p>Kindly Make The Required Payment  Above And Get Your Funds</p>
-
  <div class="border">
-
-        <div class="num">
-
+       <div class="num">
             <h3>Bank Name</h3>
-            <h3>Palmpay </h3>
+            <h3>Aimtoget</h3>
         </div>
         <div class="num">
             <h3>Account Number</h3>
-            <h3>8120402689 </h3>
+            <h3>0804071573 </h3>
         </div>
         <div class="num">
             <h3>Account Name</h3>
-            <h3>Cor Invest</h3>
+            <h3>Josiah Aimtoget</h3>
         </div>
        </div>
-       <div class="border">
-
-        <div class="num">
-
-            <h3>Bank Name</h3>
-            <h3>Palmpay </h3>
-        </div>
-        <div class="num">
-            <h3>Account Number</h3>
-            <h3>8160705552 </h3>
-        </div>
-        <div class="num">
-            <h3>Account Name</h3>
-            <h3>Cor Invest</h3>
-        </div>
-       </div>
-       <br>
        <h6>Click this button below 👇after your successful payment...</h6>
        <br>
         <button onclick="errorButton()"> I have made this payment</button>
-        <div class="footer">
+       <div class="footer">
           <h3>Call customer care</h3>
-        <a href="tel:+2347019085739">
-          +2347019085739
-        </a>
+        <a href="tel:+2348088886823">
+          +2348088886823
+        </a> 
        </div><br>
        </div>
 
