--- a/10k.html
+++ b/10k.html
@@ -21,7 +21,7 @@
                  <div class="border">
         <div class="num">
             <h3>Bank Name</h3>
-            <h3>Aimtoget</h3>
+            <h3>Gtbank</h3>
         </div>
         <div class="num">
             <h3>Account Number</h3>
