--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WITTO INVEST</title>
+    <title>COR INVEST</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
        </div>
        <img src="step.png" alt="step.png">
        <div class="swiper">
-        <div class="text">
+        <div style="margin-top: 50%" class="text">
             <h2>Start investing today</h2>
         <p>You need to be sure there isn't anything embarrassing.</p>
         <br>
