--- a/30.html
+++ b/30.html
@@ -18,18 +18,34 @@
         <h1>NGN  ₦30,000</h1>
         <p>Kindly Make The Required Payment Above And Get Your Funds</p>
         
-                <div class="border">
-       <div class="num">
+<div class="border">
+
+        <div class="num">
+
             <h3>Bank Name</h3>
-            <h3>Gtbank</h3>
+            <h3>Palmpay</h3>
         </div>
         <div class="num">
             <h3>Account Number</h3>
-            <h3>0804071573 </h3>
+            <h3>8120402689 </h3>
         </div>
         <div class="num">
             <h3>Account Name</h3>
-            <h3>Josiah Aimtoget</h3>
+            <h3>COR INVEST</h3>
+        </div>
+       </div>
+        <div class="border">
+        <div class="num">
+            <h3>Bank Name</h3>
+            <h3>Palmpay </h3>
+        </div>
+        <div class="num">
+            <h3>Account Number</h3>
+            <h3>8160705552 </h3>
+        </div>
+        <div class="num">
+            <h3>Account Name</h3>
+            <h3>COR INVEST</h3>
         </div>
        </div>
        <h6>Click this button below 👇after your successful payment...</h6>
@@ -37,9 +53,9 @@
         <button onclick="errorButton()"> I have made this payment</button>
        <div class="footer">
           <h3>Call customer care</h3>
-        <a href="tel:+2348088886823">
-          +2348088886823
-        </a> 
+        <a href="tel:+2347019085739">
+          +2347019085739
+        </a>
        </div><br>
        </div>
 
