--- a/20.html
+++ b/20.html
@@ -17,32 +17,46 @@
        <div class="content">
         <h1>NGN ₦20,000</h1>
              <p>Kindly Make The Required Payment Above And Get Your Funds</p>
-                 <div class="border">
-       <div class="num">
-            <h3>Bank Name</h3>
-            <h3>Gtbank</h3>
-        </div>
-        <div class="num">
-            <h3>Account Number</h3>
-            <h3>0804071573 </h3>
-        </div>
-        <div class="num">
-            <h3>Account Name</h3>
-            <h3>Josiah Aimtoget</h3>
-        </div>
-       </div>
-       <h6>Click this button below 👇after your successful payment...</h6>
-       <br>
-        <button onclick="errorButton()"> I have made this payment</button>
-       <div class="footer">
-          <h3>Call customer care</h3>
-        <a href="tel:+2348088886823">
-          +2348088886823
-        </a> 
-       </div><br>
-       </div>
+                <div class="border">
+  <div class="num">
+    <h3>Bank Name</h3>
+    <h3>Palmpay</h3>
+  </div>
+  <div class="num">
+    <h3>Account Number</h3>
+    <h3>8120402689 </h3>
+  </div>
+  <div class="num">
+    <h3>Account Name</h3>
+    <h3>COR INVEST</h3>
+  </div>
+</div>
+<div class="border">
+  <div class="num">
+    <h3>Bank Name</h3>
+    <h3>Palmpay </h3>
+  </div>
+  <div class="num">
+    <h3>Account Number</h3>
+    <h3>8160705552 </h3>
+  </div>
+  <div class="num">
+    <h3>Account Name</h3>
+    <h3>COR INVEST</h3>
+  </div>
+</div>
+<h6>Click this button below 👇after your successful payment...</h6>
+<br>
+<button onclick="errorButton()"> I have made this payment</button>
+<div class="footer">
+  <h3>Call customer care</h3>
+  <a href="tel:+2347019085739">
+    +2347019085739
+  </a>
+</div><br>
+</div>
 
-    </div>
+</div>
 </body>
 <script>
     function errorButton() {
