--- a/plans.html
+++ b/plans.html
@@ -82,6 +82,9 @@ i#next {
   border: 10px solid #fff;
   object-fit: cover;
 }
+input:hover{
+  background-color: slateblue;
+}
       </style>
     </section> 
     <br>
